Fix minor issue

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -132,7 +132,7 @@ import "../styles/global.css";
 						</p>
 						<a
 							href="https://github.com/DrDrunkenstien-10/minute-muse"
-							target="_blank">View on GitHub</a
+							target="_blank">GitHub</a
 						>
 					</div>
 
