feat: Implement blog layout and dynamic post listing with styling

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,7 +20,7 @@ import "../styles/global.css";
 
 				<!-- Navigation -->
 				<nav class="nav-links">
-					<a href="#blogs">Blogs</a>
+					<a href="/blog">Blog</a>
 					<a href="#experience">Experience</a>
 					<a href="#projects">Projects</a>
 					<a href="#footer">Contact</a>
