--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,7 +29,7 @@ import "../styles/global.css";
 		</header>
 
 		<main class="container">
-			<!-- 👋 Hero -->
+			<!-- Hero -->
 			<section id="hero" class="hero">
 				<h1 class="hero-title">
 					Hello, I’m <span class="hero-name">Atharva Jadhav</span>
@@ -39,7 +39,7 @@ import "../styles/global.css";
 				</p>
 			</section>
 
-			<!-- 🧑‍💻 Professional Summary -->
+			<!-- Professional Summary -->
 			<section id="summary">
 				<div class="summary-card">
 					<ul class="summary-list">
@@ -74,7 +74,7 @@ import "../styles/global.css";
 				</div>
 			</section>
 
-			<!-- 💼 Experience -->
+			<!-- Experience -->
 			<section id="experience">
 				<h2>Experience</h2>
 
@@ -403,7 +403,7 @@ import "../styles/global.css";
 			<section id="projects">
 				<h2>Projects</h2>
 				<div class="projects-grid">
-					<!-- ================= MinuteMuse ================= -->
+					<!-- MinuteMuse -->
 					<div class="project-card">
 						<!-- Header -->
 						<div class="project-header">
@@ -456,7 +456,7 @@ import "../styles/global.css";
 						</div>
 					</div>
 
-					<!-- ================= Deplens ================= -->
+					<!-- Deplens -->
 					<div class="project-card">
 						<!-- Header -->
 						<div class="project-header">
@@ -501,7 +501,7 @@ import "../styles/global.css";
 						</div>
 					</div>
 
-					<!-- Wealthwise-->
+					<!-- Wealthwise -->
 					<div class="project-card">
 						<!-- Header -->
 						<div class="project-header">
@@ -581,7 +581,7 @@ import "../styles/global.css";
 						</div>
 					</div>
 
-					<!--Aufgabenliste -->
+					<!-- Aufgabenliste -->
 					<div class="project-card">
 						<!-- Header -->
 						<div class="project-header">
@@ -651,7 +651,7 @@ import "../styles/global.css";
 						</div>
 					</div>
 
-					<!--WikiSearch -->
+					<!-- WikiSearch -->
 					<div class="project-card">
 						<!-- Header -->
 						<div class="project-header">
@@ -729,7 +729,7 @@ import "../styles/global.css";
 				</div>
 			</section>
 
-			<!-- ✍️ Blogs -->
+			<!-- Blogs -->
 			<section id="blogs">
 				<h2>Blog</h2>
 
@@ -761,7 +761,7 @@ import "../styles/global.css";
 				</div>
 			</section>
 
-			<!-- 📬 Footer -->
+			<!-- Footer -->
 			<footer id="footer">
 				<div class="footer-icons">
 					<a
